fixed layout bug. vertical scrolling works again

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -30,6 +30,7 @@ body
   +container
   margin-bottom: -75px
   height: 100%
+  min-height: 600px
 
 #header    
   +background_logo
